styling project detail page

--- a/src/app/shared/components/file-uploader/file-uploader.component.html
+++ b/src/app/shared/components/file-uploader/file-uploader.component.html
@@ -1,14 +1,12 @@
-<h4>{{promptText}}</h4>
+<div class="file-uploader-container">
+	<div class="dropzone" dropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
+		[class.hovering]="isHovering">
 
-<div class="dropzone" 
-	dropzone 
-	(hovered)="toggleHover($event)" 
-	(dropped)="onDrop($event)" 
-	[class.hovering]="isHovering">
+		<h4>Drop files here</h4>
+	</div>
 
-	<h4>Drop files here</h4>
-</div>
+	<div *ngFor="let file of files">
+		<app-upload-task [file]="file" [uploadPath]="uploadPath"></app-upload-task>
+	</div>
 
-<div *ngFor="let file of files">
-	<app-upload-task [file]="file" [uploadPath]="uploadPath"></app-upload-task>
 </div>
