--- a/src/assets/scss/abstracts/_colors.scss
+++ b/src/assets/scss/abstracts/_colors.scss
@@ -36,6 +36,6 @@ $input-invalid: $theme-error;
 $input-disabled: $theme-muted;
 
 // Button colors 
-$btn-submit: $crusta;
+$btn-submit: $theme-accent;
 
 
