--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -51,3 +51,37 @@
     	background-color: $white;
 	}
 }
+
+.project-detail-form {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
+.form-group-editable {
+	width: 100%;
+	display: flex;
+
+	padding: 5px;
+	margin-bottom: 5px;
+
+	line-height: 1.1em;
+	border: 1px solid $mercury;
+
+	label{
+		min-width: 110px;
+		line-height: 1.1em;
+		display: inline;
+		vertical-align: middle;
+	} 
+	.form-input {
+		line-height: 1.1em;
+		width: 100%;
+		border: none;
+	}
+	i { 
+		height: 100%;
+		color: $theme-muted;
+	}
+
+}
