--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -1,34 +1,50 @@
 
 <!-- <h2 class="page-header">page header</h2> -->
 
-<h3>Project details</h3>
+<div class="project-detail-container">
+	<div class="container-2">
+		<h3>Project details</h3>
 
-<!-- <form > -->
-	<div class="form-group">
-		<label>Name</label>
-		<input [value]="project.name">
+		<form [formGroup]="projectDetailForm" (ngSubmit)="savePojectDetailForm()" class="project-detail-form">
+			<div class="form-group form-group-editable">
+				<label>Name</label>
+				<input formControlName="name" class="form-input">
+				<i class="fa fa-edit"></i>			
+			</div>
+			<div class="form-group form-group-editable">
+				<label>Description</label>
+				<textarea formControlName="description" class="form-input"></textarea>
+				<i class="fa fa-edit"></i>
+			</div>
+			<button type="submit" class="form-btn small-btn" >Save</button>
+		</form>
 	</div>
-	<div class="form-group">
-		<label>Description</label>
-		<textarea [value]="project.description"></textarea>
-	</div>
-<!-- </form> -->
-	
 
-
-<div class="flex-container">
-	<div *ngFor="let file of files" class="item-preview-container">
-		<div class="item-preview" [ngStyle]="{'background-image': 'url(' +file.downloadURL+ ')' }">
-		</div>
-		<div class="item-actions">
-			<a href="#" class="transparent-btn" (click)="navToEdit(file)" [routerLink]="['edit']" [queryParams]="{id: file.id}" >Open Flow Editor</a>
-		</div>
-		<!-- <div class="item-description">
-			<label>{{file.name}}</label>
-			<br>
-			<p>{{file.description}}</p>
-		</div> -->
+	<div class="container-1">
+		<h3>Upload more files</h3>	
+		<app-file-uploader [uploadPath]="project.id"></app-file-uploader>
 	</div>
 </div>
 
-<app-file-uploader [promptText]="'Upload more files'" [uploadPath]="project.id"></app-file-uploader>
+
+	
+<br>
+<br>
+<br>
+<br>
+
+<ul>
+	<li *ngFor="let file of files">
+
+		<div class="item-preview" [ngStyle]="{'background-image': 'url(' +file.downloadURL+ ')' }"></div>
+
+		<div class="item-description">
+			<label>{{file.name}}</label>
+			<br>
+			<p>{{file.description}}</p>
+		</div>
+
+		<a href="#" (click)="navToEdit(file)" [routerLink]="['edit']" [queryParams]="{id: file.id}"> Open Flow Editor </a>
+		
+	</li>
+</ul>
