--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -1,50 +1,65 @@
-
 <!-- <h2 class="page-header">page header</h2> -->
 
 <div class="project-detail-container">
-	<div class="container-2">
+	<div class="container-top-left">
 		<h3>Project details</h3>
 
-		<form [formGroup]="projectDetailForm" (ngSubmit)="savePojectDetailForm()" class="project-detail-form">
+		<form [formGroup]="projectDetailForm" (ngSubmit)="savePojectDetailForm()" class="detail-form">
 			<div class="form-group form-group-editable">
 				<label>Name</label>
 				<input formControlName="name" class="form-input">
-				<i class="fa fa-edit"></i>			
+				<i class="fa fa-edit"></i>
 			</div>
 			<div class="form-group form-group-editable">
 				<label>Description</label>
 				<textarea formControlName="description" class="form-input"></textarea>
 				<i class="fa fa-edit"></i>
 			</div>
-			<button type="submit" class="form-btn small-btn" >Save</button>
+			<button type="submit" class="form-btn small-btn">Save</button>
 		</form>
 	</div>
 
-	<div class="container-1">
-		<h3>Upload more files</h3>	
+	<div class="container-top-right">
+		<h3>Upload more files</h3>
 		<app-file-uploader [uploadPath]="project.id"></app-file-uploader>
 	</div>
+
 </div>
 
-
-	
 <br>
-<br>
-<br>
-<br>
+<div class="container-bottom">
+	<h3>Project files</h3>
+	<ul class="file-list">
 
-<ul>
-	<li *ngFor="let file of files">
+		<li *ngFor="let file of files" class="file-list-item">
 
-		<div class="item-preview" [ngStyle]="{'background-image': 'url(' +file.downloadURL+ ')' }"></div>
+			<div class="item-preview" [ngStyle]="{'background-image': 'url(' +file.downloadURL+ ')' }"></div>
 
-		<div class="item-description">
-			<label>{{file.name}}</label>
-			<br>
-			<p>{{file.description}}</p>
-		</div>
+			<div class="item-description">
+				<div class="form-group form-group-editable">
+					<label>Name</label>
+					<input class="form-input" [value]="file.name">
+					<i class="fa fa-edit"></i>
+				</div>
+				<div class="form-group form-group-editable">
+					<label>Description</label>
+					<input class="form-input" [value]="file.description">
+					<i class="fa fa-edit"></i>
+				</div>
+			</div>
 
-		<a href="#" (click)="navToEdit(file)" [routerLink]="['edit']" [queryParams]="{id: file.id}"> Open Flow Editor </a>
-		
-	</li>
-</ul>
+			<div>
+				<a href="#" (click)="save(file)">Save</a>
+				<br><br>
+				<a href="#" (click)="delete(file)">Delete</a>
+				<br><br>
+				<a href="#" (click)="navToEdit(file)" [routerLink]="['edit']" [queryParams]="{id: file.id}">
+					Open Flow Editor
+				</a>
+			</div>
+
+
+
+		</li>
+	</ul>
+</div>
