--- a/src/assets/scss/components/_file-uploader.scss
+++ b/src/assets/scss/components/_file-uploader.scss
@@ -1,7 +1,7 @@
 // file uploader
 .file-uploader-container {
 	display: block;
-	height: 100%;
+	// height: 100%;
 }
 .dropzone { 
 	display: flex;
@@ -10,6 +10,7 @@
 	flex-direction: column; 
 	font-weight: 200;
 	height: 100%;
+	min-height: 100px;
 	border: 2px dashed $theme-accent;
 	border-radius: 5px;
 	background: white;
