--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -37,16 +37,12 @@
 
 			<div class="item-description">
 				<div class="form-group form-group-editable">
-					<label>Name</label>
-					<input class="form-input" [value]="file.name">
-					<i class="fa fa-edit"></i>
-				</div>
-				<div class="form-group form-group-editable">
-					<label>Description</label>
-					<input class="form-input" [value]="file.description">
+					<label>Page name</label>
+					<input class="form-input">
 					<i class="fa fa-edit"></i>
 				</div>
 			</div>
+
 
 			<div>
 				<a href="#" (click)="save(file)">Save</a>
