--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -31,31 +31,8 @@
 	<h3>Project files</h3>
 	<ul class="file-list">
 
-		<li *ngFor="let file of files" class="file-list-item">
-
-			<div class="item-preview" [ngStyle]="{'background-image': 'url(' +file.downloadURL+ ')' }"></div>
-
-			<div class="item-description">
-				<div class="form-group form-group-editable">
-					<label>Page name</label>
-					<input class="form-input">
-					<i class="fa fa-edit"></i>
-				</div>
-			</div>
-
-
-			<div>
-				<a href="#" (click)="save(file)">Save</a>
-				<br><br>
-				<a href="#" (click)="delete(file)">Delete</a>
-				<br><br>
-				<a href="#" (click)="navToEdit(file)" [routerLink]="['edit']" [queryParams]="{id: file.id}">
-					Open Flow Editor
-				</a>
-			</div>
-
-
-
+		<li *ngFor="let file of files">
+			<app-file-list-item [file]="file" (onSave)="saveFile(file)" (onDelete)='delete(file)' (onEdit)="navToEdit(file)"></app-file-list-item>
 		</li>
 	</ul>
 </div>
