--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -18,12 +18,13 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  margin: 0;
+  	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	color: black;
 }
 
 /* make sure to set some focus styles for accessibility */
@@ -132,16 +133,19 @@ html {
  */
 
 a:focus {
-    outline: thin dotted;
+    outline: none;
 }
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
 
-a:active,
-a:hover {
+a:active {
     outline: 0;
+}
+a:hover {
+	outline: 0;
+    cursor: pointer;
 }
 
 /**
@@ -365,13 +369,4 @@ textarea {
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
-}
-
-
-
-// Reset Override
-a {
-    &:hover {
-        cursor: pointer;
-    }
 }
