style create project button

--- a/src/app/main/projects/project-list/project-list.component.html
+++ b/src/app/main/projects/project-list/project-list.component.html
@@ -14,8 +14,9 @@
 		</div>
 	</div>
 
-	<div class="item-preview-container" [routerLink]="0">
-		Create new project +
+	<div class="item-preview-container create-new-item" [routerLink]="0">
+		<i class="fa fa-plus"></i>
+		<p>Create new project</p>
 	</div>
 </div>
 
