aside editor component

--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -1,6 +1,6 @@
 <br>
 <br>
 
-<app-editor [imgUrl]="file.downloadURL" (saveArea)="saveArea($event)"></app-editor>
+<app-editor [imgUrl]="file.downloadURL" (onSaveArea)="saveArea($event)"></app-editor>
 
-<app-aside></app-aside>
+<app-aside (onShowLinks)="onShowLinks($event)"></app-aside>
