linker component - not ready yet

--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -2,5 +2,6 @@
 <br>
 
 <app-editor [imgUrl]="file.downloadURL" (onSaveArea)="saveArea($event)"></app-editor>
+<app-linker [clickableAreas]="links" ></app-linker>
 
 <app-aside (onShowLinks)="onShowLinks($event)"></app-aside>
