--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -2,6 +2,6 @@
 <br>
 
 <app-editor [imgUrl]="file.downloadURL" (onSaveArea)="saveArea($event)"></app-editor>
-<app-linker [imgUrl]="file.downloadURL" [clickableAreas]="links" ></app-linker>
+<app-linker *ngIf="showLinks" [imgUrl]="file.downloadURL" [clickableAreas]="links"></app-linker>
 
 <app-aside (onShowLinks)="onShowLinks($event)"></app-aside>
