--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -7,12 +7,12 @@
 		<form [formGroup]="projectDetailForm" (ngSubmit)="savePojectDetailForm()" class="detail-form">
 			<div class="form-group form-group-editable">
 				<label>Name</label>
-				<input formControlName="name" class="form-input">
+				<input formControlName="name" placeholder="Enter project name" class="form-input">
 				<i class="fa fa-edit"></i>
 			</div>
 			<div class="form-group form-group-editable">
 				<label>Description</label>
-				<textarea formControlName="description" class="form-input"></textarea>
+				<textarea formControlName="description" placeholder="Enter project description" class="form-input"></textarea>
 				<i class="fa fa-edit"></i>
 			</div>
 			<button type="submit" class="form-btn small-btn">Save</button>
