--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -4,18 +4,30 @@
 	<div class="container-top-left">
 		<h3>Project details</h3>
 
-		<form [formGroup]="projectDetailForm" (ngSubmit)="savePojectDetailForm()" class="detail-form">
+		<form [formGroup]="projectDetailForm" (ngSubmit)="savePojectDetailForm()" class="form detail-form">
 			<div class="form-group form-group-editable">
-				<label>Name</label>
-				<input formControlName="name" placeholder="Enter project name" class="form-input">
-				<i class="fa fa-edit"></i>
+				<label class="form-group-label">
+					Name
+				</label>
+				<div class="form-input">
+					<input formControlName="name" placeholder="Enter project name">
+					<button class="form-group-button">
+						<i class="fa fa-save" (click)="onSaveClicked(file)"></i>
+					</button>
+				</div>
 			</div>
+
 			<div class="form-group form-group-editable">
-				<label>Description</label>
-				<textarea formControlName="description" placeholder="Enter project description" class="form-input"></textarea>
-				<i class="fa fa-edit"></i>
+				<label class="form-group-label">
+					Description
+				</label>
+				<div class="form-input">
+					<textarea formControlName="description" placeholder="Enter project description"></textarea>
+					<button class="form-group-button">
+						<i class="fa fa-save" (click)="onSaveClicked(file)"></i>
+					</button>
+				</div>
 			</div>
-			<button type="submit" class="form-btn small-btn">Save</button>
 		</form>
 	</div>
 
@@ -29,12 +41,10 @@
 <br>
 <div class="container-bottom">
 	<h3>Project files</h3>
-	
+
 	<ul class="file-list">
 		<li *ngFor="let file of files">
-			<app-file-list-item [file]="file" 
-				(onSave)="saveFile(file)" 
-				(onDelete)="delete(file)"
+			<app-file-list-item [file]="file" (onSave)="saveFile(file)" (onDelete)="delete(file)"
 				(onEdit)="navToEdit(file)">
 			</app-file-list-item>
 		</li>
