--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -10,7 +10,8 @@
     min-width: 200px;
     border: none;
     color: $white;
-    padding: 10px;
+	padding: 12px;
+	border-radius: 4px;
 }
 
 .small-btn {
