--- a/src/assets/scss/abstracts/_colors.scss
+++ b/src/assets/scss/abstracts/_colors.scss
@@ -15,8 +15,8 @@ $viking: #60ddcc;
 
 
 // Theming
-
-$theme-accent: $crusta;
+$theme: $paleSlate;
+$theme-accent: $paleSlate;
 
 $theme-background: $white;
 $theme-text: $scorpion;
