--- a/src/assets/scss/pages/_project-detail.scss
+++ b/src/assets/scss/pages/_project-detail.scss
@@ -1,25 +1,15 @@
-.project-detail-container {
+.project-data-container {
 	margin: 20px 5vw;
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
-
-	.container-top-right {
-		width: 30%;
-		height: 100%;
-	}
-
-	.container-top-left {
-		width: 60%;
-		height: 100%;
-	}	
 }
 
-.container-bottom {
+.project-files-container {
 	margin: 20px 5vw;
 }
 
 .file-list {
-
 	.file-list-item {
 		margin-top: 10px;
 		padding-top: 10px;
@@ -46,11 +36,8 @@
 			flex-grow: 2;
 			* {
 				float: right;
-			}
-			
+			}	
 		}
-
-		
 	}
 	
 }
