--- a/src/app/shared/components/file-uploader/file-uploader.component.html
+++ b/src/app/shared/components/file-uploader/file-uploader.component.html
@@ -6,7 +6,7 @@
 	</div>
 
 	<div *ngFor="let file of files">
-		<app-upload-task [file]="file" [uploadPath]="uploadPath"></app-upload-task>
+		<!-- <app-upload-task [file]="file" [uploadPath]="uploadPath" (onStartUpload)=""></app-upload-task> -->
 	</div>
 
 </div>
