--- a/src/app/main/projects/project-edit/editor/editor.component.html
+++ b/src/app/main/projects/project-edit/editor/editor.component.html
@@ -3,7 +3,9 @@
 </ng-container>
 <br>
 
-<div class="canvas-container">
-	<img class="canvas-background" #canvasBg>
-	<canvas #canvas></canvas>
+<div class="editor-area">
+	<div class="canvas-container">
+		<img class="canvas-background" #canvasBg>
+		<canvas #canvas></canvas>
+	</div>
 </div>
