--- a/src/app/main/projects/project-edit/aside/aside.component.html
+++ b/src/app/main/projects/project-edit/aside/aside.component.html
@@ -1,8 +1,8 @@
 <aside>
 	<ul class="aside-menu">
 		<li class="menu-item">
-			<label>Show all links</label>
-			<button (click)="showLinks()">toggle</button>
+			<label>Toggle saved links</label>
+			<app-button-toggle (onClick)="showLinks($event)"></app-button-toggle>
 		</li>
 	</ul>
 </aside>
