wip - selection menu pop up

--- a/src/app/main/projects/project-edit/selection-menu/selection-menu.component.html
+++ b/src/app/main/projects/project-edit/selection-menu/selection-menu.component.html
@@ -1,4 +1,4 @@
-<div class="selection-menu-container form-container">
+<div class="selection-menu form-container">
 	<button type="button" (click)="close()" class="x-btn">
 		<i class="fa fa-times"></i>
 	</button>
