--- a/src/app/main/projects/project-edit/editor/editor.component.html
+++ b/src/app/main/projects/project-edit/editor/editor.component.html
@@ -1,9 +1,12 @@
-<ng-container *ngIf="showSelectionMenu">
-	<app-selection-menu (onSaveLink)="saveLink($event)" (onClose)="closeSelectionMenu()"></app-selection-menu>
-</ng-container>
-<br>
+
 
 <div class="editor-area">
+
+		<div #selectionMenu class="selection-menu-container">
+				<app-selection-menu (onSaveLink)="saveLink($event)" (onClose)="closeSelectionMenu()"></app-selection-menu>
+			</div>
+
+			
 	<div class="canvas-container">
 		<img class="canvas-background" #canvasBg>
 		<canvas #canvas></canvas>
