place selection menu on canvas editor

--- a/src/assets/scss/components/_selection-menu.scss
+++ b/src/assets/scss/components/_selection-menu.scss
@@ -4,12 +4,11 @@
 }
 
 .selection-menu {
-	max-width: 200px;
+	// max-width: 200px;
 	border: $border-width solid $mercury;
 	background-color: $theme-background;
 	.form-group {
 		* {
-			max-width: 100%;
 			margin-bottom: 0.3em;
 		}
 	}
