refactor file-uploader component

--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -30,7 +30,7 @@
 		</form>
 
 		<h4>Upload more files</h4>
-		<app-file-uploader [uploadPath]="project.id" (onFilesDrop)="uploadFiles(files)" ></app-file-uploader>
+		<app-file-uploader (onFilesDrop)="uploadFiles(files)" ></app-file-uploader>
 </div>
 
 <div class="project-files-container">
