--- a/src/app/shared/components/upload-task/upload-task.component.html
+++ b/src/app/shared/components/upload-task/upload-task.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="percentage | async as pct">
+<!-- <div *ngIf="percentage | async as pct">
 	<progress [value]="pct" max="100"></progress>
 	{{ pct | number }}%
 </div>
@@ -19,4 +19,6 @@
 	<button (click)="task.pause()" [disabled]="!isActive(snap)">Pause</button>
 	<button (click)="task.cancel()" [disabled]="!isActive(snap)">Cancel</button>
 	<button (click)="task.resume()" [disabled]="!(snap?.state === 'paused')">Resume</button>
-</div>
+</div> -->
+
+<div> file is being uploaded ... </div>
