--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-nav></app-nav>
 
-<router-outlet></router-outlet>
+<router-outlet>
+	<notifier-container></notifier-container>
+</router-outlet>
