--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -1,11 +1,11 @@
 
 <app-editor 
-	[imgUrl]="file.downloadURL" 
+	[imgUrl]="fileUrl" 
 	(onSaveArea)="saveArea($event)">
 </app-editor>
 
 <app-linker *ngIf="showLinks" 
-	[imgUrl]="file.downloadURL" 
+	[imgUrl]="fileUrl" 
 	[clickableAreas]="links">
 </app-linker>
 
