Revert "router refactoring"
This reverts commit a0a8b082 (xmas commit)

--- a/src/app/main/projects/project-detail/project-detail.component.html
+++ b/src/app/main/projects/project-detail/project-detail.component.html
@@ -33,7 +33,7 @@
 	<app-file-uploader (onFilesDrop)="uploadFiles($event)"></app-file-uploader>
 
 	<hr>
-	<button type="button" class="form-btn" (click)="navToPresent()">Present</button>
+	<button type="button" class="form-btn" (click)="navToPlay()">Play</button>
 
 </div>
 
