--- a/src/app/main/projects/project-edit/project-edit.component.html
+++ b/src/app/main/projects/project-edit/project-edit.component.html
@@ -1,10 +1,11 @@
+
 <app-editor
-	[imgUrl]="fileUrl"
+	[imgUrl]="file.downloadURL"
 	(onSaveArea)="saveArea($event)">
 </app-editor>
 
 <app-linker *ngIf="showLinks"
-	[imgUrl]="fileUrl"
+	[imgUrl]="file.downloadURL"
 	[clickableAreas]="links">
 </app-linker>
 
