--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="display-center">
-	<h1>Lemon Pie</h1>
+	<h1 class="logo-text">Lemon Pie</h1>
 	<div class="logo">
 		<div class="lemon-petal"></div>
 		<div class="lemon-petal"></div>
