--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -1,8 +1,10 @@
 <form [formGroup]="registerForm" (ngSubmit)="register()" class="login-form">
+	<h2 class="form-title">Register</h2>
 	<div class="form-group">
 		<label>Email</label>
 		<input type="text" formControlName="email">
 	</div>
+	<br>
 	<div class="form-group">
 		<label>Password</label>
 		<input type="password" formControlName="password">
@@ -11,5 +13,5 @@
 		<label>Confirm password</label>
 		<input type="password" formControlName="confirmPassword">
 	</div>
-	<button type="submit" class="form-btn">Login</button>
+	<button type="submit" class="form-btn">Submit</button>
 </form>
