--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Athiti&display=swap');
+
 // Sass Variables (except the color variables)
 
 $border-width: 2px;
 
 $nav-height: 70px;
+
+$font-handwritten: 'Indie Flower', cursive;
+$font-normal: 'Athiti', sans-serif;
