--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,37 +1,36 @@
-// Font imports
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap&subset=greek,greek-ext');
+
 
 
 // Font declarations
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $font-normal
 }
 
-h1 { 
-    font-size: 3em; 
-    line-height: 3em; 
+h1 {
+    font-size: 3em;
+    line-height: 3em;
 }
-h2 { 
-    font-size: 2em; 
+h2 {
+    font-size: 2em;
     line-height: 2em;
 }
-h3 { 
-    font-size: 1.6em; 
+h3 {
+    font-size: 1.6em;
     line-height: 1.6em;
 }
-h4 { 
-    font-size: 1.2em; 
+h4 {
+    font-size: 1.2em;
     line-height: 1.3em;
 }
-h5 { 
+h5 {
     font-size: 0.8em;
     line-height: 1.3em;
 }
-h6 { 
+h6 {
     font-size: 0.6em;
-    line-height: 1.3em; 
+    line-height: 1.3em;
 }
-p { 
+p {
     font-size: 1em;
     line-height: 1.3em;
 }
