--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -7,10 +7,10 @@
 
 // 	.form-group {
 // 		label {
-			
+
 // 		}
-// 		input, 
-// 		select { 
+// 		input,
+// 		select {
 // 			display: block;
 // 			margin-bottom: 0.3em;
 // 			padding: 10px;
@@ -21,7 +21,7 @@
 // 			border-radius: 0 !important;
 // 			border: 1px solid $mercury;
 // 		}
-		
+
 // 	}
 
 // 	button[type="submit"] {
@@ -29,16 +29,21 @@
 // 	   color: $theme-background;
 // 	   margin-top: 0.4em;
 //     }
-	
+
 // }
 
 
 .login-form {
 	margin-top: 10vh;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 	align-items: center;
-	
+
+	.form-title {
+		display: flex;
+		margin: 0px 5px 10px 5px;
+		font-family: $font-handwritten;
+	}
     .form-group {
         margin-bottom: 2em;
         min-width: 400px;
@@ -129,6 +134,6 @@
 				color: $white;
 			}
 		}
-		
+
 	}
 }
