--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -1,17 +1,28 @@
 <form [formGroup]="registerForm" (ngSubmit)="register()" class="login-form">
 	<h2 class="form-title">Register</h2>
 	<div class="form-group">
-		<label>Email</label>
+		<label>Email<span class="required-badge">*</span></label>
 		<input type="text" formControlName="email">
+	</div>
+	<div class="form-group">
+		<label>Username</label>
+		<input type="text" formControlName="username" placeholder="How do your friends call you?">
+	</div>
+	<div class="form-group">
+		<label>Role</label>
+		<input type="text" formControlName="role" placeholder="What role describes you best?">
 	</div>
 	<br>
 	<div class="form-group">
-		<label>Password</label>
+		<label>Password<span class="required-badge">*</span></label>
 		<input type="password" formControlName="password">
 	</div>
 	<div class="form-group">
-		<label>Confirm password</label>
+		<label>Confirm password<span class="required-badge">*</span></label>
 		<input type="password" formControlName="confirmPassword">
+	</div>
+	<div class="form-group">
+		<p>Fields marked with <span class="required-badge">*</span> are required</p>
 	</div>
 	<button type="submit" class="form-btn">Submit</button>
 </form>
