create StarBadgeComponent, LemonPieLogoComponent

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,10 +1,12 @@
 <div class="display-center">
 	<h1 class="logo-text">Lemon Pie</h1>
-	<div class="logo">
-		<div class="lemon-petal"></div>
-		<div class="lemon-petal"></div>
-		<div class="lemon-petal"></div>
-		<div class="lemon-petal"></div>
-		<div class="lemon-petal"></div>
-	</div>
+	<app-lemon-pie-logo></app-lemon-pie-logo>
 </div>
+
+<footer>
+	<div class="footer-links">
+		<a>Credits</a> &nbsp;
+		<app-star-badge></app-star-badge> &nbsp;
+		<a>Docs</a>
+	</div>
+</footer>
