--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,12 +1,6 @@
 <nav>
 	<a class="nav-brand" [routerLink]="['/home']">
-		<div class="logo">
-			<div class="lemon-petal"></div>
-			<div class="lemon-petal"></div>
-			<div class="lemon-petal"></div>
-			<div class="lemon-petal"></div>
-			<div class="lemon-petal"></div>
-		</div>
+		<app-lemon-pie-logo></app-lemon-pie-logo>
 	</a>
 	<ul class="nav-menu">
 		<li [routerLink]="['/home']" class="nav-item">
