--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="registerForm" (ngSubmit)="register()" class="login-form">
 	<h2 class="form-title">Register</h2>
 	<div class="form-group">
-		<label>Email<span class="required-badge">*</span></label>
+		<label>Email<app-star-badge></app-star-badge></label>
 		<input type="text" formControlName="email">
 	</div>
 	<div class="form-group">
@@ -14,15 +14,15 @@
 	</div>
 	<br>
 	<div class="form-group">
-		<label>Password<span class="required-badge">*</span></label>
+		<label>Password<app-star-badge></app-star-badge></label>
 		<input type="password" formControlName="password">
 	</div>
 	<div class="form-group">
-		<label>Confirm password<span class="required-badge">*</span></label>
+		<label>Confirm password<app-star-badge></app-star-badge></label>
 		<input type="password" formControlName="confirmPassword">
 	</div>
 	<div class="form-group">
-		<p>Fields marked with <span class="required-badge">*</span> are required</p>
+		<p>Fields marked with <app-star-badge></app-star-badge> are required</p>
 	</div>
 	<button type="submit" class="form-btn">Submit</button>
 </form>
