add footer in HomePage

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="display-center">
+<div class="home-hero">
 	<h1 class="logo-text">Lemon Pie</h1>
 	<app-lemon-pie-logo></app-lemon-pie-logo>
 </div>
