--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific style for home page
 
-.display-center {
+.home-hero {
     display: flex;
     justify-content: center;
     flex-direction: column;
