--- a/src/assets/scss/components/_logo.scss
+++ b/src/assets/scss/components/_logo.scss
@@ -1,7 +1,7 @@
 // LEMOINPIE LOGO
 
-$outter: #319960fa;
-$inner: $theme-focus;
+$outter: $theme-focus;
+$inner: $theme-accent;
 
 $lemonLogoSize: 100px;// pixels
 .logo {
