Add styles for user friendly notifications

--- a/src/assets/scss/abstracts/_colors.scss
+++ b/src/assets/scss/abstracts/_colors.scss
@@ -30,7 +30,7 @@ $theme-button: $theme;
 
 // Form colors
 $input-default: $theme;
-$input-valid: $theme-text;
+$input-valid: $theme-accent;
 $input-focus: $theme-focus;
 $input-invalid: $theme-error;
 $input-disabled: $theme-muted;
