Profile page styling

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -10,7 +10,7 @@
 	</div>
 	<div class="form-group">
 		<label>Role</label>
-		<input type="text" formControlName="role" placeholder="What role describes you best?">
+		<input type="text" formControlName="role" placeholder="What professional role best describes you?">
 	</div>
 	<br>
 	<div class="form-group">
