--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -1,42 +1,42 @@
-<h3 *ngIf="currentUser">
-	Hello {{currentUser.username ? currentUser.username : currentUser.email }}
-</h3>
+<h2 class="page-header">My Profile</h2>
 
+<div class="profile-page-container">
+	<form [formGroup]="userDetailForm" (ngSubmit)="saveUserDetailForm()" class="form detail-form">
+		<h3 class="form-title">User details</h3>
+		<div class="form-group">
+			<label class="form-group-label">Username</label>
+			<input class="form-input" type="text" formControlName="username">
+		</div>
+		<div class="form-group">
+			<label class="form-group-label">Email</label>
+			<input class="form-input" type="email" formControlName="email">
+		</div>
+		<div class="form-group">
+			<label class="form-group-label">Role</label>
+			<input class="form-input" type="text" formControlName="role">
+		</div>
+		<div class="form-group">
+			<label class="form-group-label">Active projects</label>
+			<input class="form-input" type="number" formControlName="projectsCount" disabled>
+		</div>
+	</form>
 
-<form [formGroup]="userDetailForm" (ngSubmit)="saveUserDetailForm()" class="form detail-form">
-	<h3 class="form-title">User details</h3>
-	<div class="form-group">
-		<label class="form-group-label">Username</label>
-		<input class="form-input" type="text" formControlName="username">
-	</div>
-	<div class="form-group">
-		<label class="form-group-label">Email</label>
-		<input class="form-input" type="email" formControlName="email">
-	</div>
-	<div class="form-group">
-		<label class="form-group-label">Role</label>
-		<input class="form-input" type="text" formControlName="role">
-	</div>
-	<div class="form-group">
-		<label class="form-group-label">Active projects</label>
-		<input class="form-input" type="number" formControlName="projectsCount" disabled>
-	</div>
-</form>
+	<br><br>
 
-
-<form [formGroup]="changePasswordForm" (ngSubmit)="saveChangePasswordForm()" class="form detail-form">
-	<h3 class="form-title">Change Password</h3>
-	<div class="form-group">
-		<label class="form-group-label">Old Password</label>
-		<input class="form-input" type="password" formControlName="oldPassword">
-	</div>
-	<div class="form-group">
-		<label class="form-group-label">New Password</label>
-		<input class="form-input" type="password" formControlName="password">
-	</div>
-	<div class="form-group">
-		<label class="form-group-label">Confirm password</label>
-		<input class="form-input" type="password" formControlName="confirmPassword">
-	</div>
-	<button type="submit" class="form-btn small-btn">Update Password</button>
-</form>
+	<form [formGroup]="changePasswordForm" (ngSubmit)="saveChangePasswordForm()" class="form detail-form">
+		<h3 class="form-title">Change Password</h3>
+		<div class="form-group">
+			<label class="form-group-label">Old Password</label>
+			<input class="form-input" type="password" formControlName="oldPassword">
+		</div>
+		<div class="form-group">
+			<label class="form-group-label">New Password</label>
+			<input class="form-input" type="password" formControlName="password">
+		</div>
+		<div class="form-group">
+			<label class="form-group-label">Confirm password</label>
+			<input class="form-input" type="password" formControlName="confirmPassword">
+		</div>
+		<button type="submit" class="form-btn small-btn">Update Password</button>
+	</form>
+</div>
