--- a/src/assets/scss/pages/_user-profile.scss
+++ b/src/assets/scss/pages/_user-profile.scss
@@ -1,1 +1,20 @@
 // Specific style for user profile page
+
+.profile-page-container {
+
+	padding: 0 20px;
+
+	form {
+		max-width: 80vw;
+		margin: 0 auto;
+
+		.form-title,
+		.form-btn {
+			align-self: flex-end;
+			margin-top: 10px;
+		}
+		.form-input {
+			padding: 10px;
+		}
+	}
+}
